# rloc

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: archive.rs  cli.rs  counter.rs  custom_langs.rs  diff.rs  error.rs  languages.rs  lib.rs  main.rs  output.rs  stats.rs  strip.rs  walker.rs
tests/: cli.rs
