[package]
name = "rloc"
version = "0.1.0"
edition = "2024"
authors = ["JS"]
description = "A fast, modern Rust implementation of cloc (Count Lines of Code)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/js/rloc"
keywords = ["cloc", "loc", "lines-of-code", "code-metrics", "cli"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
walkdir = "2"
ignore = "0.4"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
comfy-table = "7"
colored = "2"
regex = "1"
once_cell = "1"
num_cpus = "1"
indicatif = { version = "0.17", features = ["rayon"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
memmap2 = "0.9"
bstr = "1"
ahash = "0.8"
phf = { version = "0.11", features = ["macros"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
