[package]
name = "rloc"
version = "0.1.0"
edition = "2024"
authors = ["JS"]
description = "A fast, modern Rust implementation of cloc (Count Lines of Code)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/js/rloc"
keywords = ["cloc", "loc", "lines-of-code", "code-metrics", "cli"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[lib]
name = "rloc"
path = "src/lib.rs"

[[bin]]
name = "rloc"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = [
    "dep:clap",
    "dep:comfy-table",
    "dep:colored",
    "dep:indicatif",
    "dep:csv",
]

[dependencies]
# Core library dependencies
walkdir = "2"
ignore = "0.4"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
once_cell = "1"
num_cpus = "1"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
memmap2 = "0.9"
bstr = "1"
ahash = "0.8"
dashmap = "6"
phf = { version = "0.11", features = ["macros"] }
zip = "7"
tar = "0.4"
flate2 = "1"
thiserror = "2"

# CLI-only dependencies
clap = { version = "4", features = ["derive", "env"], optional = true }
comfy-table = { version = "7", optional = true }
colored = { version = "3", optional = true }
indicatif = { version = "0.18", features = ["rayon"], optional = true }
csv = { version = "1", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
